force-app/main/default/objects/RetailerService__c/RetailerService__c.object-meta.xml
<CustomObject>
    <description>Retailer Service relates Services to a Retailer, which determines the Services that are available when building a Project Service. Retailer Service is related to Retailer and Service.</description>
    <label>Retailer Service</label>
    <nameField>
        <displayFormat>RTSR-{000}</displayFormat>
        <label>Retailer Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retailer Services</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>