force-app/main/default/objects/RetailerService__c/fields/Friday__c.field-meta.xml
<CustomField>
    <fullName>Friday__c</fullName>
    <label>Friday</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>