force-app/main/default/objects/RetailerService__c/fields/FridayStartTime__c.field-meta.xml
<CustomField>
    <fullName>FridayStartTime__c</fullName>
    <label>Friday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>