force-app/main/default/objects/RetailerService__c/fields/JobManualTemplate__c.field-meta.xml
<CustomField>
    <fullName>JobManualTemplate__c</fullName>
    <label>Job Manual Template</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom Template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>