force-app/main/default/objects/RetailerService__c/fields/MondayStartTime__c.field-meta.xml
<CustomField>
    <fullName>MondayStartTime__c</fullName>
    <description>Default start time for monday</description>
    <label>Monday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>