force-app/main/default/objects/RetailerService__c/fields/PeriodLock__c.field-meta.xml
<CustomField>
    <fullName>PeriodLock__c</fullName>
    <label>Period Lock</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Locked</fullName>
            </value>
            <value>
                <fullName>Orop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>