force-app/main/default/objects/RetailerService__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Retailer</label>
    <referenceTo>Retailer__c</referenceTo>
    <relationshipLabel>Retailer Services</relationshipLabel>
    <relationshipName>RetailerService_Retailers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>