force-app/main/default/objects/RetailerService__c/fields/Saturday__c.field-meta.xml
<CustomField>
    <fullName>Saturday__c</fullName>
    <label>Saturday</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>