force-app/main/default/objects/RetailerService__c/fields/SaturdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>SaturdayStartTime__c</fullName>
    <label>Saturday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>