force-app/main/default/objects/RetailerService__c/fields/SundayStartTime__c.field-meta.xml
<CustomField>
    <fullName>SundayStartTime__c</fullName>
    <inlineHelpText>For example: 10:00 am</inlineHelpText>
    <label>Sunday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>