force-app/main/default/objects/RetailerService__c/fields/ThursdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>ThursdayStartTime__c</fullName>
    <label>Thursday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>