force-app/main/default/objects/RetailerService__c/fields/Tuesday__c.field-meta.xml
<CustomField>
    <fullName>Tuesday__c</fullName>
    <label>Tuesday</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>