force-app/main/default/objects/RetailerService__c/fields/TuesdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>TuesdayStartTime__c</fullName>
    <label>Tuesday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>