force-app/main/default/objects/RetailerService__c/fields/UseColorPrinter__c.field-meta.xml
<CustomField>
    <fullName>UseColorPrinter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>this field is used to indicate if this retailer&#39;s service event manual should use what type of printer: color or white/black</description>
    <label>Use Color Printer</label>
    <type>Checkbox</type>
</CustomField>