force-app/main/default/objects/RetailerService__c/fields/Wednesday__c.field-meta.xml
<CustomField>
    <fullName>Wednesday__c</fullName>
    <label>Wednesday</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>