force-app/main/default/objects/RetailerService__c/fields/WednesdayStartTime__c.field-meta.xml
<CustomField>
    <fullName>WednesdayStartTime__c</fullName>
    <label>Wednesday Start Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>