force-app/main/default/objects/RetailerService__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Service__c</columns>
    <columns>Retailer__c</columns>
    <columns>JobManualTemplate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>